修改GC